Add route `/tsdws/stations/brief/` to retrieve a station list with helpful info
